Implement strategy improvements: ADX hysteresis, timeframe confluence, BB breakout detection, consecutive loss limit to 3, TP/SL controls, UK timezone

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -13,6 +13,10 @@ MAX_MARTINGALE_STEPS=3
 TRADE_DURATION=180
 TRADE_DURATION_UNIT=s
 
+# Take Profit / Stop Loss (in currency units)
+MAX_DAILY_PROFIT_TARGET=200.0
+MAX_SESSION_LOSS=100.0
+
 # Server Configuration
 API_HOST=0.0.0.0
 API_PORT=8000
