Add configurable contract duration and symbol selection to frontend settings panel

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -6,12 +6,21 @@ DERIV_API_TOKEN=your_api_token_here
 DERIV_APP_ID=1089
 
 # Trading Configuration
+# Symbol options: R_10, R_25, R_50, R_75, R_100 (Volatility indices)
+# R_10 = Volatility 10 Index (1s), R_25 = Vol 25 (2s), R_50 = Vol 50 (1s), R_75 = Vol 75 (1s), R_100 = Vol 100 (2s)
 SYMBOL=R_75
+
+# Contract Duration (in seconds)
+# Recommended: 180-300s (3-5 minutes) for this strategy
+# TRENDING markets: 300s (5 min) - pullback reversals take time
+# RANGING markets: 180s (3 min) - mean reversion happens faster
+# UNCERTAIN markets: 240s (4 min) - middle ground
+TRADE_DURATION=300
+TRADE_DURATION_UNIT=s
+
 INITIAL_STAKE=10
 RISK_PERCENT=2
 MAX_MARTINGALE_STEPS=3
-TRADE_DURATION=180
-TRADE_DURATION_UNIT=s
 
 # Take Profit / Stop Loss (in currency units)
 MAX_DAILY_PROFIT_TARGET=200.0
