CRITICAL FIX: Update to correct Deriv API symbol codes - use 1HZ prefix for 1-second tick indices (1HZ10V, 1HZ25V, 1HZ50V, 1HZ75V, 1HZ100V)

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -6,9 +6,11 @@ DERIV_API_TOKEN=your_api_token_here
 DERIV_APP_ID=1089
 
 # Trading Configuration
-# Symbol options: R_10, R_25, R_50, R_75, R_100 (Volatility indices)
-# R_10 = Volatility 10 Index (1s), R_25 = Vol 25 (2s), R_50 = Vol 50 (1s), R_75 = Vol 75 (1s), R_100 = Vol 100 (2s)
-SYMBOL=R_75
+# Symbol options for 1-second tick indices (recommended for M1 strategy):
+# 1HZ10V = Volatility 10 (1s), 1HZ25V = Vol 25 (1s), 1HZ50V = Vol 50 (1s), 
+# 1HZ75V = Vol 75 (1s), 1HZ100V = Vol 100 (1s)
+# Standard 2-second indices: R_10, R_25, R_50, R_75, R_100
+SYMBOL=1HZ75V
 
 # Contract Duration (in seconds)
 # Recommended: 180-300s (3-5 minutes) for this strategy
